--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                  <!-- Culto de Celebração SM -->
                  <div class="event-card" data-category="sao-miguel">
-                    <div class="event-image" style="background-image: url('imagens/cultosm.png')"></div>
+                    <div class="event-image" style="background-image: url('imagens/cultosm.jpg')"></div>
                     <div class="event-info">
                         <span class="event-date"><i class="far fa-calendar-alt"></i> Domingo - Em São Miguel - 19:17h</span>
                         <h3>Culto de Adoração</h3>
